# DataAnalysis_eCommerce_Audit

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
codes/: custom.mplstyle  ecommerce_ETL.sql  ecommerce_analysis.ipynb
reports/: eCommerce_presentation.pptx  ecommerce_analysis_report.html
scripts/: ecommerce_converter.py
