[project]
name = "ecommerce-audit"
version = "0.1.0"
description = "The logistical resilience and market dynamics of the Brazilian e-commerce platform."
authors = [
    {name = "Dominika Drazyk",email = "dominika.a.drazyk@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dataframe-image (>=0.2.7,<0.3.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "jupysql (>=0.11.1,<0.12.0)",
    "sqlparse (>=0.5.5,<0.6.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "unidecode (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
